[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

## Required for version control via git tags
# requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]

# [tool.setuptools_scm]
# version_scheme = "release-branch-semver"
# local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"naqs_devices" = "./src/naqs_devices" 

[project]
name = "naqs_devices_template_device" # EDITME
description = "Template repository to create devices within the naqs_device namespace" # EDITME
authors = [{name = "naqslab", email = "naqslab@gmail.com"}] # EDITME
dynamic = ["version"]
license = {file = 'LICENSE.txt'}
dependencies = [
    "naqs_devices @ git+https://github.com/naqslab/naqs_devices.git",
    "blacs>=3.0.0",
    "labscript_devices>=3.0.0",
    "labscript>=3.0.0",
    "labscript_utils>=3.0.0",
    "numpy>=1.15.1",
    "h5py",
]

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.3.7",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==4.0.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"