[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"naqs_devices" = "./src/naqs_devices" 

# This controls the version from the src/naqs_devices/TemplateDevice/__init__.py
[tool.setuptools.dynamic]
version = {attr = "naqs_devices.TemplateDevice.__version__"}

[project]
# Update the keys [name, description, authors]
# Dependencies should only be the minimum required to install
# The below list are a typical minimal set required for a labscript device
# The first is the parent namespace
# Then labscript components

name = "naqs_devices_template_device" 
description = "Template repository to create devices within the naqs_device namespace"
authors = [{name = "naqslab", email = "naqslab@gmail.com"}]
dynamic = ["version"] # go check this in the docs
license = {file = 'LICENSE.txt'}
dependencies = [
    "naqs_devices @ git+https://github.com/naqslab/naqs_devices.git",
    "blacs>=3.0.0",
    "labscript_devices>=3.0.0",
    "labscript>=3.0.0",
    "labscript_utils>=3.0.0",
    "numpy>=1.15.1",
    "h5py",
]

# These are required to build the RTD docs, don't touch them unless RTD complains
[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.3.7",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==4.0.1",
]

# Don't change this
[project.readme]
file = "README.md"
content-type = "text/markdown"